fix(picker-customers): endpoint readability
The endpoint was not readable on mobile (320 width)

--- a/src/components/picker-customers/picker-customers.scss
+++ b/src/components/picker-customers/picker-customers.scss
@@ -105,6 +105,11 @@ button.md {
         margin-left: auto;
       }
     }
+
+    p code {
+      width: 65%;
+      flex-shrink: 0;
+    }
   }
 
   .base-environments-list-item + .base-environments-list-item {
